# anari-library-vtkm

./: .gitignore  CMakeLists.txt  README.md
device/: CMakeLists.txt  HelideMath.h  Object.cpp  Object.h  RenderingSemaphore.h  VTKmDevice.cpp  VTKmDevice.h  VTKmDeviceGlobalState.cpp  VTKmDeviceGlobalState.h  VTKmDeviceQueries.cpp  VTKmDeviceQueries.h  VTKmLibrary.cpp  VTKmTypes.h  ViskoresDevice.cpp  ViskoresDevice.h  ViskoresDeviceGlobalState.cpp  ViskoresDeviceGlobalState.h  ViskoresLibrary.cpp  ViskoresTypes.h  viskores_device.json  viskores_device_math.h  vtkm_device.json  vtkm_device_math.h
device/array/: Array1D.cpp  Array1D.h  Array2D.cpp  Array2D.h  Array3D.cpp  Array3D.h  ArrayConversion.cpp  ArrayConversion.h  ObjectArray.cpp  ObjectArray.h
device/camera/: Camera.cpp  Camera.h  Orthographic.cpp  Orthographic.h  Perspective.cpp  Perspective.h
device/frame/: Frame.cpp  Frame.h
device/renderer/: Renderer.cpp  Renderer.h
device/scene/: Group.cpp  Group.h  Instance.cpp  Instance.h  World.cpp  World.h
device/scene/light/: Light.cpp  Light.h
device/scene/surface/: Surface.cpp  Surface.h
device/scene/surface/geometry/: Geometry.cpp  Geometry.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
device/scene/surface/material/: Material.cpp  Material.h  MatteMaterial.cpp  MatteMaterial.h
device/scene/surface/material/sampler/: Image1DSampler.cpp  Image1DSampler.h  Sampler.cpp  Sampler.h
device/scene/volume/: TransferFunction1D.cpp  TransferFunction1D.h  Volume.cpp  Volume.h
device/scene/volume/spatial_field/: SpatialField.cpp  SpatialField.h  StructuredRegularField.cpp  StructuredRegularField.h
